        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.22 vanilla (kernel.org)
       * Due to recently discovered recovery problems, we do not recommend
        using patchless RHEL 4 clients with this or any earlier release.
       * Recommended e2fsprogs version: 1.40.2-cfs5
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.

Severity   : enhancement
Bugzilla   : 14288
Description: Update to RHEL4 Update-6 kernel-2.6.9-67.EL.

Severity   : normal
Bugzilla   : 12702
Frequency  : rare, in recovery and (or) destroy lovobjid file.
Description: rewrite lov objid code.
Details    : Cleanup for lov objid code, remove scability problems and wrong
             locking. Fix sending last_id into ost.

Severity   : enhancement
Bugzilla   : 14388
Description: Update to SLES10 SP1 latest kernel-2.6.16.54-0.2.3.

Severity   : enhancement
Bugzilla   : 14289
Description: Update to RHEL5 Update-1 kernel 2.6.18-53.el5.
Details    : Use d_move_locked instead of __d_move.

Severity   : major
Bugzilla   : 14260
Frequency  : rare, at shutdown
Description: access already free / zero obd_namespace.
Details    : if client_disconnect_export was called without force flag set,
             and exist connect request in flight, this can produce access to
	     NULL pointer (or already free pointer) when connect_interpret 
	     store ocd flags in obd_namespace.

Severity   : minor
Bugzilla   : 14418
Frequency  : only at startup
Description: not alloc memory with spinlock held.
Details    : allocation memory with GFP_KERNEL can produce sleep deadlock,
             if any spinlock held.

Severity   : major
Frequency  : always
Bugzilla   : 14270
Description: lfs find does not continue on file error
Details    : Continue other files processing when a file/dir is absent.

Severity   : normal
Bugzilla   : 11791
Description: Inconsistent usage of lustre_pack_reply()
Details    : Standardize the usage of lustre_pack_reply() such that it